# autonomous-drone-system

./: .gitignore  notes.temp
arduino_ws/drone_mcu/: drone_mcu.ino
arduino_ws/drone_mcu/src/estimation/: altitude_ekf.cpp  altitude_ekf.h
arduino_ws/drone_mcu/src/sensors/: baro.cpp  baro.h  imu.cpp  imu.h  lidar.cpp  lidar.h
camera_calibration/: calibrate.py  calibration.json  calibration_800_600.json
config/: system.yaml
docker_shared/: snapshot.raw
drone_systemd/: README.txt  drone.service
esp_ws/height_estimator/: CMakeLists.txt  main.c  read_data.py
esp_ws/height_estimator/main/: main.c
model_train/: convert_crowdhuman.py  convert_sompt22.py  convert_visdrone.py  dataset_boxes.py  inference_image.py  inference_video.py  train_model.py
pybullet/: config.py  eval.py  hotspot_debug_eval.py  plot_training_logs.py  run_eval.sh  run_hotspot_debug.sh  run_train.sh  test_env.py  train.py
pybullet/.claude/: settings.local.json
pybullet/env/: __init__.py  env.py  observation.py  reward.py
pybullet/onnx/: CMakeLists.txt  HOST_CPP_SETUP.md  bench.out  benchmark_inference.cpp  build_host.sh  export_onnx.py  main.out  marl_agent.onnx  marl_agent.onnx.data  run_inference.py  run_random_inference.cpp
pybullet/rl/: __init__.py  action_masking.py  buffer.py  live_debug.py  networks.py  state_utils.py  trainer.py
pybullet/saves/: ckpt_update_6000.pt
pybullet/sim/: __init__.py  camera_geometry.py  debug_draw.py  drone.py  person.py  pybullet_world.py
ros2_docker/: Dockerfile  docker-compose.yml  entrypoint.sh  marl_agent.onnx.data  start_core.sh  start_link.sh  start_nodes.sh
ros2_docker/old-dockerfiles/: Dockerfile.broken  Dockerfile.jazzy
ros2_ws/: stream_viewer.py
ros2_ws/camera_calibration/: calibrate.py  calibration_640_480.json  save_images.py
ros2_ws/camera_localization/: demo  main.cpp  ray_ground_intersection.hpp  test.py
ros2_ws/src/camera_node/: CMakeLists.txt  package.xml
ros2_ws/src/camera_node/include/camera_node/: camera_node.hpp
ros2_ws/src/camera_node/src/: camera_node.cpp
ros2_ws/src/drone_camera/: CMakeLists.txt  package.xml
ros2_ws/src/drone_camera/include/drone_camera/: camera_capture.hpp
ros2_ws/src/drone_camera/launch/: camera_capture.launch.py
ros2_ws/src/drone_camera/src/: camera_capture_node.cpp
ros2_ws/src/drone_link/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_link/drone_link/: __init__.py  bridge_common.py  gcs_link_bridge.py  pi_link_bridge.py
ros2_ws/src/drone_link/launch/: gcs_link.launch.py  pi_link.launch.py
ros2_ws/src/drone_link/resource/: drone_link
ros2_ws/src/drone_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/drone_msgs/msg/: AltitudeControllerInput.msg  AutonomousAction.msg  ControlState.msg  DroneInfo.msg  DroneState.msg  FrameData.msg  GcsHeartbeat.msg  McuVerticalEstimate.msg  SceneState.msg  TeleopCommand.msg  TrackedObject.msg
ros2_ws/src/drone_msgs/srv/: SetPidGains.srv  SetTargetHeight.srv
ros2_ws/src/drone_pipeline/: CMakeLists.txt  drone_pipeline_components.xml  package.xml
ros2_ws/src/drone_pipeline/include/drone_pipeline/: autonomous_controller.hpp  camera_capture.hpp  camera_output.hpp  flight_logger.hpp  h264_encoder.hpp  mjpeg_streamer.hpp  mjpeg_writer.hpp  ray_ground_intersection.hpp  record_video.hpp  save_video.hpp  stream_codec.hpp  tracker.hpp  video_streamer.hpp  vision_pipeline.hpp
ros2_ws/src/drone_pipeline/launch/: drone_pipeline.launch.py
ros2_ws/src/drone_pipeline/src/: autonomous_controller.cpp  camera_capture_node.cpp  camera_output.cpp  flight_logger.cpp  h264_encoder.cpp  mjpeg_streamer.cpp  mjpeg_writer.cpp  record_video.cpp  save_video.cpp  tracker.cpp  video_streamer.cpp  vision_pipeline.cpp
ros2_ws/src/mavros_config/: CMakeLists.txt  package.xml
ros2_ws/src/mavros_config/config/: control_params.yaml  teleop_params.yaml
ros2_ws/src/mavros_gate/: CMakeLists.txt  package.xml
ros2_ws/src/mavros_gate/include/mavros_gate/: altitude_controller.hpp  command_gate.hpp  control_gate.hpp  mcu_bridge.hpp
ros2_ws/src/mavros_gate/launch/: mavros_gate.launch.py  mavros_gate_compositor.launch.py
ros2_ws/src/mavros_gate/src/: altitude_controller.cpp  command_gate.cpp  commands.cpp  compositor.cpp  control_gate.cpp  mcu_bridge.cpp  publishers.cpp  subscriptions.cpp  utils.cpp
ros2_ws/src/mavros_gcs/: package.xml  setup.cfg  setup.py
ros2_ws/src/mavros_gcs/config/: teleop_params.yaml
ros2_ws/src/mavros_gcs/mavros_gcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ros2_ws/src/mavros_gcs/mavros_gcs/launch/: gcs.launch.py
ros2_ws/src/mavros_gcs/mavros_gcs/nodes/: command_gate.py  heartbeat.py  info_panel.py  master_node.py  stream_viewer.py  teleop_keyboard.py
ros2_ws/src/mavros_gcs/mavros_gcs/panel_utils/: helpers.py  views.py
ros2_ws/src/mavros_gcs/mavros_gcs/teleop_utils/: command_helpers.py  command_manager.py  commands.py  definitions.py  mavros_comm.py  params.py  print_manual.py  teleop_io.py
ros2_ws/src/teleop_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/teleop_msgs/msg/: TeleopAction.msg  TeleopCommand.msg
systemd_services/: 99-camera-settings.rules  README.txt  camera-settings.service  drone-core.service  drone-link.service  drone.service
tools/: fake_mcu.py  tracker5.py  tune.py  view_mcu_data.py
