<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_link</name>
  <version>0.0.0</version>
  <description>Socket bridge between the onboard-local ROS graph and the GCS-local ROS graph.</description>
  <maintainer email="batuhan@todo.todo">batuhan</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>drone_msgs</depend>
  <depend>ffmpeg_image_transport_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
