<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_pipeline</name>
  <version>0.1.0</version>
  <description>Camera capture and flight logging nodes for drone companion board</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>yaml-cpp</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>drone_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>rclcpp_components</depend>
  <depend>ffmpeg_image_transport_msgs</depend>
  <depend>libturbojpeg</depend>
  
  <export>
  <build_type>ament_cmake</build_type>
  <rclcpp_components plugin="${prefix}/drone_pipeline_components.xml"/>
  </export>
</package>